src/css/contact.scss
.contact-container {
  margin-top: 5vh;
  display: flex;
  flex-direction: column;
  align-items: center;

  .checkbox-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
  }
  .contact-info-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    margin: 60px 0 0 0;
    .contact-info {
      width: 33%;
      margin: 5px;
      text-align: center;
    }
  }
}
@media screen and (max-width: 800px) {
  .contact-container {
    margin: 10px;
    h3 {
      font-size: 1.2em;
    }
    .contact-info-container {
      flex-direction: column;

      align-items: center;
      margin: 30px 0 0 0;
      .contact-info {
        width: 90%;
        margin: 5px;
        text-align: center;
      }
    }
  }
}

